[package]
name = "linelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
bincode = "1.3.3"
xmltree = "0.10.3"
simple-log = "1.4.0"
serde = "1.0.136"
rapier2d = "0.11.1"
assets_manager = "0.7.2"
anyhow = "1.0.53"
serde_json = "1.0.78"
nalgebra-glm = "0.15.0"
nalgebra = "0.29.0"
# egui_sdl2_gl = {path = "../egui_sdl2_gl", version="0.16.0"}
lyon = {version="0.17.10", features=["lyon_svg", "svg"]}
crossbeam = "0.8.0"
threadpool = "1.8.1"
libp2p = "0.42.2"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
backtrace = "0.3"
# egui = "0.16.1"
# egui = {path="../egui/egui", version="0.16.1"}
# imgui = "0.8.2"

# imgui = {git = "https://github.com/imgui-rs/imgui-rs/"}
imgui-sdl2 = "0.15.0"
imgui-opengl-renderer = "0.11.1"

# This custom fork has docking support
# imgui = { git = "https://github.com/NoxWings/imgui-rs.git", tag = "1.81dock" }
# imgui-sdl2 = { git = "https://github.com/NoxWings/rust-imgui-sdl2.git" }
# imgui-opengl-renderer = { git = "https://github.com/NoxWings/rust-imgui-opengl-renderer.git" }
imgui = {version="0.8.2", feature=["docking"]}
renderdoc = "0.10.1"


[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf","image","gfx","mixer","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2[x11]", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "9eb76edabf4b1cb1abfb67823d900daf8112da0f"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }